// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core screen snapshots matches dashboard screen 1`] = `
<View
  style={
    {
      "gap": 16,
      "paddingBottom": 24,
    }
  }
>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#111111",
          "fontSize": 22,
          "fontWeight": "700",
        },
        undefined,
      ]
    }
  >
    Spend Summary
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 8,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          false,
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#5B5B5B",
              "fontSize": 13,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        Day
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          {
            "backgroundColor": "#F3F3F3",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#111111",
              "fontSize": 13,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        Week
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          false,
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#5B5B5B",
              "fontSize": 13,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        Month
      </Text>
    </View>
  </View>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#5B5B5B",
          "fontSize": 15,
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Loading dashboard summary...
  </Text>
</View>
`;

exports[`Core screen snapshots matches insights loading state 1`] = `
<View
  style={
    {
      "gap": 16,
      "paddingBottom": 24,
    }
  }
>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#111111",
          "fontSize": 22,
          "fontWeight": "700",
        },
        undefined,
      ]
    }
  >
    Weekly Insights
  </Text>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#5B5B5B",
          "fontSize": 15,
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Loading weekly insight...
  </Text>
</View>
`;

exports[`Core screen snapshots matches onboarding screen 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "gap": 20,
      "padding": 24,
    }
  }
>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#111111",
          "fontSize": 28,
          "fontWeight": "700",
        },
        undefined,
      ]
    }
  >
    Automatic money tracking, finally.
  </Text>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#5B5B5B",
          "fontSize": 15,
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Grant notification access to auto-detect UPI transactions, then verify your phone for secure sync.
  </Text>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E9E9E9",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 16,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#111111",
            "fontSize": 18,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Secure onboarding
    </Text>
    <View
      style={
        {
          "gap": 8,
          "marginTop": 12,
        }
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#5B5B5B",
              "fontSize": 15,
              "fontWeight": "500",
            },
            undefined,
          ]
        }
      >
        1. Notification access (required for auto capture)
      </Text>
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#5B5B5B",
              "fontSize": 15,
              "fontWeight": "500",
            },
            undefined,
          ]
        }
      >
        2. Phone OTP (account sync)
      </Text>
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#5B5B5B",
              "fontSize": 15,
              "fontWeight": "500",
            },
            undefined,
          ]
        }
      >
        3. No READ_SMS for Play build
      </Text>
      <View
        style={
          {
            "gap": 4,
            "marginTop": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "letterSpacing": 0.1,
              },
              {
                "color": "#5B5B5B",
                "fontSize": 13,
                "fontWeight": "500",
              },
              undefined,
            ]
          }
        >
          Phone Number (E.164)
        </Text>
        <TextInput
          autoCapitalize="none"
          autoCorrect={false}
          keyboardType="phone-pad"
          onChangeText={[Function]}
          placeholder="+919876543210"
          placeholderTextColor="#888888"
          style={
            [
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#E9E9E9",
                "borderRadius": 14,
                "borderWidth": 1,
                "color": "#111111",
                "fontSize": 15,
                "height": 48,
                "paddingHorizontal": 16,
              },
              undefined,
            ]
          }
          value=""
        />
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "height": 46,
          "justifyContent": "center",
          "paddingHorizontal": 20,
        },
        {
          "backgroundColor": "#F0F0F0",
          "borderColor": "#E9E9E9",
          "borderWidth": 1,
        },
        false,
        false,
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#111111",
            "fontSize": 15,
            "fontWeight": "600",
          },
          undefined,
        ]
      }
    >
      Send OTP
    </Text>
  </View>
</View>
`;

exports[`Core screen snapshots matches review queue loading state 1`] = `
<View
  style={
    {
      "gap": 12,
      "paddingBottom": 24,
    }
  }
>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#111111",
          "fontSize": 22,
          "fontWeight": "700",
        },
        undefined,
      ]
    }
  >
    Review Queue
  </Text>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#5B5B5B",
          "fontSize": 15,
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Low-confidence transactions need your confirmation.
  </Text>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#5B5B5B",
          "fontSize": 15,
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Loading review queue...
  </Text>
  <View
    style={
      {
        "gap": 12,
      }
    }
  />
</View>
`;

exports[`Core screen snapshots matches settings screen 1`] = `
<View
  style={
    {
      "gap": 16,
      "paddingBottom": 24,
    }
  }
>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#111111",
          "fontSize": 22,
          "fontWeight": "700",
        },
        undefined,
      ]
    }
  >
    Settings & Privacy
  </Text>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E9E9E9",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 16,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#111111",
            "fontSize": 15,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Notification Access
    </Text>
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#5B5B5B",
            "fontSize": 13,
            "fontWeight": "500",
          },
          undefined,
        ]
      }
    >
      Enabled • Last capture 4m ago
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E9E9E9",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 16,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#111111",
            "fontSize": 15,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Data Controls
    </Text>
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#5B5B5B",
            "fontSize": 13,
            "fontWeight": "500",
          },
          undefined,
        ]
      }
    >
      Export your data or request full account deletion anytime.
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E9E9E9",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 16,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#111111",
            "fontSize": 15,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Pro
    </Text>
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#5B5B5B",
            "fontSize": 13,
            "fontWeight": "500",
          },
          undefined,
        ]
      }
    >
      Advanced AI insights, custom rules, unlimited exports.
    </Text>
  </View>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 999,
            "height": 46,
            "justifyContent": "center",
            "paddingHorizontal": 20,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderWidth": 1,
          },
          false,
          false,
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#5B5B5B",
              "fontSize": 15,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        Export Data
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 999,
            "height": 46,
            "justifyContent": "center",
            "paddingHorizontal": 20,
          },
          {
            "backgroundColor": "transparent",
          },
          false,
          false,
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#5B5B5B",
              "fontSize": 15,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        Delete Account
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 999,
            "height": 46,
            "justifyContent": "center",
            "paddingHorizontal": 20,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderWidth": 1,
          },
          false,
          false,
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#5B5B5B",
              "fontSize": 15,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        Sign Out
      </Text>
    </View>
  </View>
</View>
`;

exports[`Core screen snapshots matches transactions screen 1`] = `
<View
  style={
    {
      "gap": 16,
      "paddingBottom": 24,
    }
  }
>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#111111",
          "fontSize": 22,
          "fontWeight": "700",
        },
        undefined,
      ]
    }
  >
    Transactions
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 8,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          {
            "backgroundColor": "#F3F3F3",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#111111",
              "fontSize": 13,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        All
      </Text>
    </View>
  </View>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#5B5B5B",
          "fontSize": 15,
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Loading transactions...
  </Text>
  <View
    style={
      {
        "gap": 12,
      }
    }
  />
</View>
`;
